--- a/m02/applications/github-app/package.json
+++ b/m02/applications/github-app/package.json
@@ -1,23 +1,36 @@
 {
   "scripts": {
     "start": "webpack-dashboard -- node server.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage --watch",
+    "lint": "standard --verbose | snazzy",
+    "lint:watch": "gulp",
+    "lint:fix": "standard --fix",
     "build": "cross-env NODE_ENV=production webpack --progress --config webpack.prod.config -p",
-
     "storybook": "start-storybook -p 6006 -c storybook",
     "build-storybook": "build-storybook -c storybook"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
     "@kadira/storybook": "^2.30.1",
     "babel-core": "^6.18.2",
+    "babel-jest": "^24.0.0",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "chai": "^4.2.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "gulp": "^4.0.0",
     "html-webpack-plugin": "^2.24.1",
+    "jest-cli": "^24.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "snazzy": "^8.0.0",
     "standard": "^8.5.0",
     "standard-loader": "^5.0.0",
     "style-loader": "^0.13.1",
@@ -30,5 +43,12 @@
     "@fdaciuk/ajax": "^2.1.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
+  },
+  "standard": {
+    "globals": [
+      "test",
+      "it",
+      "describe"
+    ]
   }
 }
